Refactor citation section in sprintbacklog.html
Updated citation formatting and emphasized book title.

--- a/sprintbacklog.html
+++ b/sprintbacklog.html
@@ -74,12 +74,18 @@
             </div>
         </div>
 
-        <div class="citation">
-            The Visual AGILExicon® is a trademark of Innolution, LLC and Kenneth S. Rubin. The Visual AGILExicon is used and
-            described in the book: <em>Essential Scrum: A Practical Guide to the Most Popular Agile Process.</em> You can learn
-            more about the Visual AGILExicon and permitted uses at:
-            <a href="http://innolution.com/resources/val-home-page">http://innolution.com/resources/val-home-page</a>
+        <div class="citation mt-3">
+          <em>
+            The Visual AGILExicon® is a trademark of Innolution, LLC and Kenneth S. Rubin.
+            The Visual AGILExicon is used and described in the book:
+            <strong>Essential Scrum: A Practical Guide to the Most Popular Agile Process.</strong>
+            You can learn more about the Visual AGILExicon and permitted uses at:
+            <a href="http://innolution.com/resources/val-home-page">
+              http://innolution.com/resources/val-home-page
+            </a>.
+          </em>
         </div>
+
     </div>
 
     <!-- Bootstrap JavaScript CDN -->
